# zsh-ai

./: .editorconfig  Cargo.toml
src/: commands.rs  config.rs  lib.rs  openai.rs
src/commands/: completion.rs  login.rs
