[package]
name = "zsh_ai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.10", features = ["derive"] }
confy = { version = "0.5.1", features = ["serde_yaml", "yaml_conf"], default-features = false }
reqwest = { version = "0.11.14", features = ["json", "cookies", "blocking"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
